Implement backend pagination and demo seed data